istio/frontend-external-svc-remove.yaml
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: frontend-external
  labels:
    app: frontend
